# serial

./: .gitignore  main.c  meson.build  packet.h
examples/receiver/: main.c  meson.build
include/: packet.h  serial.h
src/: main.c  serial.c
